--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -69,4 +69,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="accounts1.json">
+      <Filter>리소스 파일</Filter>
+    </None>
+  </ItemGroup>
 </Project>
